# grawlix-rust

./: .gitattributes  .gitignore  .gitlab-ci.yml  .grawlix-update  Cargo.toml  LICENSE  README.md
src/: error.rs  lib.rs
src/cli/: args.rs  logging.rs  main.rs  options.rs  update.rs  utils.rs
src/comic/: format.rs  mod.rs  page.rs  read.rs  write.rs
src/metadata/: comicrack.rs  mod.rs  tachayomi.rs  tests.rs
src/source/: clientbuilder.rs  dcuniverseinfinite.rs  download.rs  flipp.rs  leagueoflegends.rs  mangaplus.rs  marvel.rs  mod.rs  request.rs  tools.rs  utils.rs  webtoon.rs
src/source/sites/: dcuniverseinfinite.rs  flipp.rs  izneo.rs  leagueoflegends.rs  mangaplus.rs  marvel.rs  mod.rs  webtoon.rs
src/source/utils/: general_source.rs  mod.rs  tests.rs
tests/metadata_data/: comicrack.xml
tests/source_data/: dcuniverseinfinite_issue.json  dcuniverseinfinite_series.json  flipp_issue.json  izneo_issue.json  izneo_series.json  leagueoflegends_issue.json  leagueoflegends_issue_metadata.json  leagueoflegends_series.json  mangaplus_issue  mangaplus_series  marvel_issue.html  marvel_issue.json  marvel_pages.json  marvel_series.json  webtoon_issue.html  webtoon_series.html
